# ResourceMonitor

./: CMakeLists.txt  System.cpp  System.hpp  lol  main.cpp  tem.bat
CPU/: CMakeLists.txt
CPU/impl/: CPUInfo.cpp
CPU/impl/include/: CPUInfo.hpp
CPU/interface/: ICPUInfo.hpp
Memory/: CMakeLists.txt
Memory/impl/: PhysicalMemory.cpp  VirtualMemory.cpp
Memory/impl/include/: PhysicalMemory.hpp  VirtualMemory.hpp
Memory/interface/: IMemory.hpp
common/: CMakeLists.txt
common/impl/: DataOperation.cpp
common/impl/include/: DataOperation.hpp
